Opened 10 years ago
Closed 10 years ago
#11669 closed bug (fixed)
Long lines are cut off
Reported by: | waddlesplash | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev48498.
As you can see in the attached screenshot, some very long lines are cut off in the Debugger's source view. This line is >80 characters.
The complete line that is cut off is:
fPoseContainer->GridLayout()->AddView(fPoseView->TitleView(), 0, 1, 2);
Attachments (1)
Change History (4)
by , 10 years ago
Attachment: | debugger_long_lines_cut_off.png added |
---|
comment:1 by , 10 years ago
That behavior isn't reproducible over here with the system fixed font set to the default Dejavu Sans Mono. Are you using a different one?
comment:2 by , 10 years ago
Nope. But I haven't upgraded past the outsourcing of the DejaVu font, I wonder if the packaged DejaVu is somehow different?
Or maybe it's something about this file? It's a modified ContainerView.cpp from Tracker - if you want an exact copy, you can get it from here.
comment:3 by , 10 years ago
Milestone: | R1/beta1 → Unscheduled |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev48576.
Screenshot showing the bug.