Debugger: Fix #11669.

SourceView:
- When calculating line widths for scrollbar calculation purposes, tabstop
  offsets weren't being correctly taken into account, which would result
  in lines being computed as shorter than they actually were. Depending
  on the content of the file, the horizontal scrollbar would consequently
  be configured improperly in some cases.